text on mobile not visible - fix

--- a/main.css
+++ b/main.css
@@ -184,7 +184,7 @@ p {
   }
 
   .grid-item:hover {
-    /* Remove hover effect */
+    /* Remove hover */
     transform: none;
     filter: grayscale(0%);
   }
@@ -192,6 +192,7 @@ p {
   .grid-item:hover .grid-item-text {
     opacity: 1;
     text-shadow: 0px 1px 1px #333;
+    bottom: 0;
   }
 
   .footer p {
